[tool.poetry]
name = "lektor-nl2br"
version = "0.1.1"
description = "Lektor template filter to convert linebreaks to <br> tags"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cigar-factory/lektor-nl2br"
keywords = ["Lektor plugin"]
classifiers = [
    "Framework :: Lektor",
    "Environment :: Plugins",
]

[tool.poetry.dependencies]
python = "^3.6"
lektor = "3.*"

[tool.poetry.dev-dependencies]
isort = { version = "^5.8", python = "^3.6.2" }
flake8 = "^3.9.2"
black = { version = "==21.9b0", allow-prereleases = true, python = "^3.6.2" }
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."lektor.plugins"]
nl2br = "lektor_nl2br:Nl2BrPlugin"
