[tool.poetry]
name = "lektor-nl2br"
version = "0.2.0"
description = "Lektor template filter to convert linebreaks to <br> tags"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cigar-factory/lektor-nl2br"
keywords = ["Lektor plugin"]
classifiers = [
    "Framework :: Lektor",
    "Environment :: Plugins",
]

[tool.poetry.dependencies]
python = ">=3.7"
lektor = "3.*"

[tool.poetry.dev-dependencies]
isort = "^5.11"
flake8 = "^5.0.4"
black = "==23.3.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."lektor.plugins"]
nl2br = "lektor_nl2br:Nl2BrPlugin"
